chore: initial port to 1.20.1
Note: all external soft dependencies removed (KubeJS, JEI, REI, Game Stages...)
These will be reimplemented via the FTB XMod Compat 1.20.1 port